Fixed bug 8117: In generic tree now appears horizontal scroll when needed

--- a/web/skins/Default/Openbravo_ERP_250.css
+++ b/web/skins/Default/Openbravo_ERP_250.css
@@ -4445,6 +4445,7 @@ td.TextBox_MsgContainerVt_td {
 */
 
 .Tree_Row {
+  clear: left;
   height: 19px;
 }
 
